# pkms

./: .env.example  .gitattributes  .gitignore  .gitmessage  .gitmodules  Dockerfile.base  GIT_WORKFLOW.md  INSTALLATION.md  README.docker.md  README.md  TAGGING_GUIDE.md  call_site_fix_search_ergebnisse_tuples_→_dicts_v_2.md  docker-compose.yml  migrate-to-submodule.sh  pyproject.toml  requirements.txt  setup-git.sh  teil_1_aktualisiert_v_2.md  teil_2_korrigierte_module_struktur_fehlerbereinigt_v_2.py
.cline/prompts/: user-prompt-submit-hook.md
.git-hooks/: post-merge  pre-commit  pre-push
.pkms/: MCP_SETUP.md  config.toml  mcp_server.py  pyproject.toml  requirements.txt  setup-git.sh  taxonomy.toml
.pkms/lib/: config.py  embeddings.py  records_io.py
.pkms/lib/chunking/: hybrid.py
.pkms/lib/frontmatter/: core.py
.pkms/lib/fs/: ids.py  paths.py  slug.py
.pkms/lib/search/: README.md  search_engine.py
.pkms/lib/utils/: README.md  __init__.py  tokens.py
.pkms/pkms/lib/: __init__.py  config.py  embeddings.py
.pkms/pkms/lib/chunking/: hybrid.py
.pkms/pkms/lib/frontmatter/: core.py
.pkms/pkms/lib/fs/: ids.py  paths.py  slug.py
.pkms/pkms/lib/search/: README.md  __init__.py  search_engine.py
.pkms/pkms/lib/utils/: README.md
.pkms/pkms/models/: __init__.py  chunk.py  embedding_meta.py  record.py
.pkms/pkms/tools/: README.md  archive.py  chunk.py  embed_index.py  ingest.py  link.py  relevance.py  synth.py
.pkms/schema/: README.md  chunk.schema.json
.pkms/tests/test_data/notes_good/: ofen-temperatur.md
.pkms/tools/: README.md  __init__.py  archive.py  chunk.py  embed_index.py  index.py  ingest.py  link.py  relevance.py  review.py  search.py  synth.py  tag.py  taxonomy_tag.py  update.py
data/chunks/: 01KA4VH9C1XJG25KP4ND8WX4W1.ndjson  01KA4VH9N78T0EY065GTPZE0NA.ndjson  01KA4VH9NEHTQ0F9W7W9SC73VV.ndjson  01KA4VH9NNWX71XZQPKNWGJK4K.ndjson  01KA4VH9NTB8C250Q3XXQ8WH3Q.ndjson  01KA4VH9P1QEFMRV9KS9X2F441.ndjson  01KA4VH9P7PY4JWQGXWZYQ9YS6.ndjson  01KA4VH9PFT0ARVBWJK481FYRA.ndjson  01KA4VH9PPS23VMQF41SCMGM4C.ndjson  01KA4VH9Q2NWDYMQ5S3375JC0A.ndjson  01KA4VH9Q957EBRWNFJMZ14WMV.ndjson  01KA4VH9QE5SK166RZJH81F5D6.ndjson  01KA4VH9QRMN9VQ55V8XCB7B2V.ndjson  01KA4VH9QXPMVKM1YN30K7S9A1.ndjson  01KA4VH9R35Q6WPV7BA50XSMEM.ndjson  01KA4VH9RCTQY316JC646N8BZ9.ndjson  01KA4VH9RHXK55BV6PV73R19CR.ndjson  01KA4VH9RW5TNEFKJYF5SRWGB2.ndjson  01KA4VH9S41HECGZ699E9101YJ.ndjson  01KA4VH9SF5REY7XBRJWGTW0HN.ndjson  01KA4VH9SRW026PJH5F06ZFKAV.ndjson  01KA4VH9T2DVWFBXMTN85KK4V1.ndjson  01KA4VH9TDD6BT4FC2564G6VD7.ndjson  01KA4VH9TJ6Z6Q2TA7S9KN3JPD.ndjson  01KA4VH9TTXK7N9858H4D2YENQ.ndjson  01KA4VH9V4XTDB2EP1ZJ7T5AEG.ndjson  01KA4VH9VBE7TGMBJQZBZ3C76G.ndjson  01KA4VH9VJBQMB41Y668QJ8NA6.ndjson  01KA4VH9VRTBGN2D2R2GBD45D0.ndjson  01KA4VH9W6NTQJDN3GFE52QHXG.ndjson  01KA4VH9WEBYG00Q6CEX6RYSJY.ndjson  01KA4VH9WN8CXA4K7PRMAS5283.ndjson  01KA4VH9WYNFK4HFMVXZMC5MK2.ndjson  01KA4VH9X4HDR4485X9W0D5W3K.ndjson  01KA4VH9X9BGSSZ4MHNZAPPEMC.ndjson  01KA4VH9XFW70CHE3XZJASPE73.ndjson  01KA4VH9XNKH3NGZA4PQE3SHS4.ndjson  01KA4VH9XX3PAAY64KQ3Z5ZAH3.ndjson  (+85 more)
data/index/: _MAIN_2.toc  (+2 more)
docs/: PROBLEMS.md  TUTORIAL.md  plan.md
pkms/: __init__.py
schema/: embedding_meta.schema.json  link.schema.json  record.schema.json  status.schema.json
test_data/: README.md
tests/: __init__.py  conftest.py  test_chunking.py  test_links.py  test_utils.py
(+494 files in other folders)
